ref: acessibility issue/ color contrast

--- a/style.scss
+++ b/style.scss
@@ -191,7 +191,7 @@ h1 {
 
             p:last-child {
                 font-size: 0.5em;
-                color: color(grey-400);
+                // color: color(grey-400);
             }
         }
 
